fix testcase failure