@@ -1,10 +1,16 @@
 package com.example.retailstore.webapp.services;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 import com.example.retailstore.webapp.config.KeycloakProperties;
 import com.example.retailstore.webapp.web.model.request.RegistrationRequest;
@@ -18,6 +24,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.util.MultiValueMap;
@@ -71,9 +78,10 @@ class KeycloakRegistrationServiceTest {
         var request = new RegistrationRequest(
                 "testuser", "test@example.com", "Test", "User", "password123", 9848022334L, "junitAddress");
 
-        when(responseSpec.body(eq(Map.class))).thenReturn(Map.of("access_token", "mock-token"));
-        when(responseSpec.toBodilessEntity()).thenReturn(ResponseEntity.ok().build());
-        when(keycloakProperties.getRealm()).thenReturn("test-realm");
+        given(responseSpec.body(any(ParameterizedTypeReference.class)))
+                .willReturn(Map.of("access_token", "mock-token"));
+        given(responseSpec.toBodilessEntity()).willReturn(ResponseEntity.ok().build());
+        given(keycloakProperties.getRealm()).willReturn("test-realm");
 
         // When/Then
         assertDoesNotThrow(() -> registrationService.registerUser(request));
@@ -88,14 +96,15 @@ class KeycloakRegistrationServiceTest {
                 "testUser", "test@example.com", "Test", "User", "testPassword", 9848022334L, "junitAddress");
 
         // Mock Keycloak responses
-        when(keycloakProperties.getRealm()).thenReturn("test-realm");
-        when(keycloakProperties.getAdminClientId()).thenReturn("admin-cli");
-        when(keycloakProperties.getAdminClientSecret()).thenReturn("admin-secret");
+        given(keycloakProperties.getRealm()).willReturn("test-realm");
+        given(keycloakProperties.getAdminClientId()).willReturn("admin-cli");
+        given(keycloakProperties.getAdminClientSecret()).willReturn("admin-secret");
 
         // Mock specific responses for token and user creation calls
-        when(responseSpec.body(eq(Map.class))).thenReturn(Map.of("access_token", "mock-token")); // For token response
-        when(responseSpec.toBodilessEntity())
-                .thenReturn(ResponseEntity.status(201).build()); // For user creation response
+        given(responseSpec.body(any(ParameterizedTypeReference.class)))
+                .willReturn(Map.of("access_token", "mock-token")); // For token response
+        given(responseSpec.toBodilessEntity())
+                .willReturn(ResponseEntity.status(201).build()); // For user creation response
 
         // Act
         registrationService.registerUser(registrationRequest);
@@ -108,30 +117,34 @@ class KeycloakRegistrationServiceTest {
         verify(requestBodySpec).body(requestCaptor.capture()); // Captures Map body for user creation
 
         String tokenRequestBody = stringRequestCaptor.getValue();
-        assertTrue(tokenRequestBody.contains("grant_type=password"));
-        assertTrue(tokenRequestBody.contains("client_id=" + keycloakProperties.getAdminClientId()));
-        assertTrue(tokenRequestBody.contains("client_secret=" + keycloakProperties.getAdminClientSecret()));
-        assertTrue(tokenRequestBody.contains("username=admin"));
-        assertTrue(tokenRequestBody.contains("password=admin1234"));
+        assertThat(tokenRequestBody.contains("grant_type=password")).isTrue();
+        assertThat(tokenRequestBody.contains("client_id=" + keycloakProperties.getAdminClientId()))
+                .isTrue();
+        assertThat(tokenRequestBody.contains("client_secret=" + keycloakProperties.getAdminClientSecret()))
+                .isTrue();
+        assertThat(tokenRequestBody.contains("username=admin")).isTrue();
+        assertThat(tokenRequestBody.contains("password=admin1234")).isTrue();
 
         // Second call is for user creation
         Map<String, Object> userRequestBody = requestCaptor.getValue(); // No explicit cast needed if captor is typed
-        assertEquals(registrationRequest.username(), userRequestBody.get("username"));
-        assertEquals(registrationRequest.email(), userRequestBody.get("email"));
-        assertEquals(registrationRequest.firstName(), userRequestBody.get("firstName"));
-        assertEquals(registrationRequest.lastName(), userRequestBody.get("lastName"));
-        assertTrue((Boolean) userRequestBody.get("enabled"));
+        assertThat(userRequestBody.get("username")).isEqualTo(registrationRequest.username());
+        assertThat(userRequestBody.get("password")).isEqualTo(registrationRequest.password());
+        assertThat(userRequestBody.get("email")).isEqualTo(registrationRequest.email());
+        assertThat(userRequestBody.get("firstName")).isEqualTo(registrationRequest.firstName());
+        assertThat(userRequestBody.get("lastName")).isEqualTo(registrationRequest.lastName());
+        assertThat((Boolean) userRequestBody.get("enabled")).isTrue();
 
         @SuppressWarnings("unchecked") // Suppress warning for casting Object to List<Map<String,String>>
         List<Map<String, String>> credentials = (List<Map<String, String>>) userRequestBody.get("credentials");
-        assertEquals(1, credentials.size());
-        assertEquals("password", credentials.get(0).get("type"));
-        assertEquals(registrationRequest.password(), credentials.get(0).get("value"));
-        assertFalse(Boolean.parseBoolean((String) credentials.get(0).get("temporary")));
+        assertThat(credentials).isNotEmpty().hasSize(1);
+        assertThat(credentials.getFirst().get("type")).isEqualTo("password");
+        assertThat(credentials.getFirst().get("value")).isEqualTo(registrationRequest.password());
+        assertThat(Boolean.parseBoolean(credentials.getFirst().get("temporary")))
+                .isFalse();
 
         @SuppressWarnings("unchecked") // Suppress warning for casting Object to List
         List<String> realmRoles = (List<String>) userRequestBody.get("realmRoles");
-        assertTrue(realmRoles.contains("user"));
+        assertThat(realmRoles.contains("user")).isTrue();
     }
 
     @Test
@@ -145,14 +158,14 @@ class KeycloakRegistrationServiceTest {
         // For this test, the failure happens during getAdminToken, so getRealm() for user creation URI is not reached.
         // lenient().when(keycloakProperties.getRealm()).thenReturn("test-realm"); // Removed as it's not used in this
         // failure path
-        when(keycloakProperties.getAdminClientId()).thenReturn("admin-cli");
-        when(keycloakProperties.getAdminClientSecret()).thenReturn("admin-secret");
+        given(keycloakProperties.getAdminClientId()).willReturn("admin-cli");
+        given(keycloakProperties.getAdminClientSecret()).willReturn("admin-secret");
 
         // Simulate failure in retrieving token
-        when(responseSpec.body(eq(Map.class))).thenReturn(Map.of("error", "unauthorized"));
+        given(responseSpec.body(any(ParameterizedTypeReference.class))).willReturn(Map.of("error", "unauthorized"));
 
         // When/Then
-        assertThrows(RuntimeException.class, () -> registrationService.registerUser(request));
+        assertThatThrownBy(() -> registrationService.registerUser(request)).isInstanceOf(RuntimeException.class);
         // Verify that getRealm was NOT called, confirming it's not part of the failing token path.
         verify(keycloakProperties, never()).getRealm();
     }
@@ -162,14 +175,15 @@ class KeycloakRegistrationServiceTest {
         // Given
         var request = new RegistrationRequest(
                 "testuser", "test@example.com", "Test", "User", "password123", 9848022334L, "junitAddress");
-        when(keycloakProperties.getRealm()).thenReturn("test-realm");
-        when(keycloakProperties.getAdminClientId()).thenReturn("admin-cli");
-        when(keycloakProperties.getAdminClientSecret()).thenReturn("admin-secret");
+        given(keycloakProperties.getRealm()).willReturn("test-realm");
+        given(keycloakProperties.getAdminClientId()).willReturn("admin-cli");
+        given(keycloakProperties.getAdminClientSecret()).willReturn("admin-secret");
 
-        when(responseSpec.body(eq(Map.class))).thenReturn(Map.of("access_token", "mock-token"));
-        when(responseSpec.toBodilessEntity()).thenThrow(new RuntimeException("Keycloak registration failed"));
+        given(responseSpec.body(any(ParameterizedTypeReference.class)))
+                .willReturn(Map.of("access_token", "mock-token"));
+        given(responseSpec.toBodilessEntity()).willThrow(new RuntimeException("Keycloak registration failed"));
 
         // When/Then
-        assertThrows(RuntimeException.class, () -> registrationService.registerUser(request));
+        assertThatThrownBy(() -> registrationService.registerUser(request)).isInstanceOf(RuntimeException.class);
     }
 }
